fix firefox alignment

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 body {
   display: flex;
   flex-direction: column;
-  min-height: calc(100% - 25px);
+  min-height: calc(100vh - 25px);
 }
 
 .footer {
